---
source: tests/insta_test.rs
expression: tester.conv_program().as_ref().unwrap()
---
ConvProgram {
    components: [
        Func(
            ConvFuncDef {
                ty: Func {
                    ret_ty: Base(
                        Int,
                    ),
                    args: [],
                    is_flexible: true,
                },
                name: "main",
                args: [],
                body: Block(
                    [
                        Switch {
                            expr: ConvExpr {
                                kind: Func(
                                    Label(
                                        "f",
                                    ),
                                    [],
                                    true,
                                    0,
                                ),
                                ty: Base(
                                    Int,
                                ),
                                debug_info: DebugInfo {
                                    file_info: ,
                                    pos: Position {
                                        n_char: 10,
                                        n_line: 3,
                                    },
                                },
                            },
                            cases: [
                                0,
                                1,
                            ],
                            stmt: Block(
                                [
                                    LoopControl(
                                        Case(
                                            0,
                                            Return(
                                                Some(
                                                    ConvExpr {
                                                        kind: Num(
                                                            0,
                                                        ),
                                                        ty: Base(
                                                            Int,
                                                        ),
                                                        debug_info: DebugInfo {
                                                            file_info: ,
                                                            pos: Position {
                                                                n_char: 13,
                                                                n_line: 5,
                                                            },
                                                        },
                                                    },
                                                ),
                                                "main",
                                            ),
                                        ),
                                    ),
                                    LoopControl(
                                        Case(
                                            1,
                                            Return(
                                                Some(
                                                    ConvExpr {
                                                        kind: Num(
                                                            1,
                                                        ),
                                                        ty: Base(
                                                            Int,
                                                        ),
                                                        debug_info: DebugInfo {
                                                            file_info: ,
                                                            pos: Position {
                                                                n_char: 13,
                                                                n_line: 7,
                                                            },
                                                        },
                                                    },
                                                ),
                                                "main",
                                            ),
                                        ),
                                    ),
                                    LoopControl(
                                        Default(
                                            Return(
                                                Some(
                                                    ConvExpr {
                                                        kind: Num(
                                                            666,
                                                        ),
                                                        ty: Base(
                                                            Int,
                                                        ),
                                                        debug_info: DebugInfo {
                                                            file_info: ,
                                                            pos: Position {
                                                                n_char: 13,
                                                                n_line: 9,
                                                            },
                                                        },
                                                    },
                                                ),
                                                "main",
                                            ),
                                        ),
                                    ),
                                ],
                            ),
                            has_default: true,
                        },
                    ],
                ),
                stack_size: 0,
            },
        ),
    ],
}
